crates/plotnik-lib/tests/02-parser/recovery_validation/capture_dotted_followed_by_field.txt
(node) @foo.bar name: (other)
------------------ DIAGNOSTICS -------------------
error: capture names must be snake_case
 --> query.ptk:1:8
  |
1 | (node) @foo.bar name: (other)
  |        ^^^^^^^^
  |
help: use `@foo_bar`
  |
1 - (node) @foo.bar name: (other)
1 + (node) @foo_bar name: (other)
  |
help: captures become fields in the output
